Functions in train_classifier  process_data ; Done

--- a/data/process_data.ipynb
+++ b/data/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "9  Nou kwadebouke, nou gen pwoblem sant m yo nan ...  direct  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "array(['direct', 'social', 'news'], dtype=object)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "'Weather update - a cold front from Cuba that could pass over Haiti'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "9  18  related-1;request-1;offer-0;aid_related-1;medi..."
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "'related-1;request-0;offer-0;aid_related-0;medical_help-0;medical_products-0;search_and_rescue-0;security-0;military-0;child_alone-0;water-0;food-0;shelter-0;clothing-0;money-0;missing_people-0;refugees-0;death-0;other_aid-0;infrastructure_related-0;transport-0;buildings-0;electricity-0;tools-0;hospitals-0;shops-0;aid_centers-0;other_infrastructure-0;weather_related-0;floods-0;storm-0;fire-0;earthquake-0;cold-0;other_weather-0;direct_report-0'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -920,13 +920,69 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "categories.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "related                   0\n",
+       "request                   0\n",
+       "offer                     0\n",
+       "aid_related               0\n",
+       "medical_help              0\n",
+       "medical_products          0\n",
+       "search_and_rescue         0\n",
+       "security                  0\n",
+       "military                  0\n",
+       "child_alone               0\n",
+       "water                     0\n",
+       "food                      0\n",
+       "shelter                   0\n",
+       "clothing                  0\n",
+       "money                     0\n",
+       "missing_people            0\n",
+       "refugees                  0\n",
+       "death                     0\n",
+       "other_aid                 0\n",
+       "infrastructure_related    0\n",
+       "transport                 0\n",
+       "buildings                 0\n",
+       "electricity               0\n",
+       "tools                     0\n",
+       "hospitals                 0\n",
+       "shops                     0\n",
+       "aid_centers               0\n",
+       "other_infrastructure      0\n",
+       "weather_related           0\n",
+       "floods                    0\n",
+       "storm                     0\n",
+       "fire                      0\n",
+       "earthquake                0\n",
+       "cold                      0\n",
+       "other_weather             0\n",
+       "direct_report             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories"
    ]
   },
   {
@@ -1883,7 +1939,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_data(messages_filepath, categories_filepath):\n",
+    "    ''''\n",
+    "\n",
+    "    '''\n",
+    "    messages = pd.read_csv(messages_filepath)\n",
+    "    categories = pd.read_csv(categories_filepath)\n",
+    "\n",
+    "    df = messages.merge(categories, on='id')\n",
+    "\n",
+    "\n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
