Made tweaks in all files

--- a/models/mlpipeline.ipynb
+++ b/models/mlpipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,14 @@
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "import pickle\n",
+    "from sklearn.metrics import precision_score, accuracy_score, recall_score, f1_score\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -426,19 +428,19 @@
        "[26216 rows x 36 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X,Y,category_names = load_data('./DisasterResponse.db')\n",
+    "X,Y,category_names = load_data('../data/DisasterResponse.db')\n",
     "Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,18 +531,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,Y,category_names = load_data('./DisasterResponse.db')\n",
+    "X,Y,category_names = load_data('../data/DisasterResponse.db')\n",
     "\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +559,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +594,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   8 out of  20 | elapsed:  2.1min remaining:  3.1min\n"
+      "[Parallel(n_jobs=-1)]: Done   8 out of  20 | elapsed:  1.5min remaining:  2.2min\n",
+      "[Parallel(n_jobs=-1)]: Done  20 out of  20 | elapsed:  2.2min finished\n"
      ]
     }
    ],
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -611,13 +614,140 @@
        "{'clf__estimator__min_samples_split': 2, 'clf__estimator__n_estimators': 10}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model, X_test, Y_test, category_names):\n",
+    "    \"\"\"\n",
+    "    INPUT:\n",
+    "    model - ML model\n",
+    "    X_test - test messages\n",
+    "    y_test - categories for test messages\n",
+    "    category_names - category name for y\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    none - print scores (precision, recall, f1-score) for each output category of the dataset.\n",
+    "    \"\"\"\n",
+    "    accuracy_scores = []\n",
+    "    precision_scores = []\n",
+    "    f1_scores = []\n",
+    "    all_recall = []\n",
+    "\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    for i, cat in enumerate(category_names):\n",
+    "\n",
+    "        accuracy_scores.append(accuracy_score(\n",
+    "            Y_test.values[:, i], y_pred[:, i])*100)\n",
+    "        precision_scores.append(precision_score(\n",
+    "            Y_test.values[:, i], y_pred[:, i], average='weighted')*100)\n",
+    "        f1_scores.append(\n",
+    "            f1_score(Y_test.values[:, i], y_pred[:, i], average='weighted')*100)\n",
+    "        all_recall.append(recall_score(\n",
+    "            Y_test.values[:, i], y_pred[:, i], average='weighted')*100)\n",
+    "\n",
+    "    all_scores_dict = dict(zip(category_names, zip(\n",
+    "        accuracy_scores, precision_scores, f1_scores, all_recall)))\n",
+    "\n",
+    "    all_scores_df = pd.DataFrame(all_scores_dict).T\n",
+    "\n",
+    "    all_scores_df.columns = ['Accuracy', 'Precision', 'F1', 'Recall']\n",
+    "\n",
+    "    all_scores_df = all_scores_df.reset_index().rename(\n",
+    "        columns={'index': 'Feature'})\n",
+    "\n",
+    "\n",
+    "    print(all_scores_df.to_string(index=False),flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Feature   Accuracy  Precision         F1     Recall\n",
+      "               related  99.104872  99.103932  99.101202  99.104872\n",
+      "               request  98.804801  98.820626  98.787833  98.804801\n",
+      "                 offer  99.898281  99.898385  99.891702  99.898281\n",
+      "           aid_related  98.652223  98.674008  98.649205  98.652223\n",
+      "          medical_help  98.708168  98.723659  98.655896  98.708168\n",
+      "      medical_products  99.155732  99.160882  99.119435  99.155732\n",
+      "     search_and_rescue  99.374428  99.378424  99.334458  99.374428\n",
+      "              security  99.537178  99.539350  99.504137  99.537178\n",
+      "              military  99.521920  99.522514  99.504937  99.521920\n",
+      "           child_alone 100.000000 100.000000 100.000000 100.000000\n",
+      "                 water  99.435459  99.438842  99.423192  99.435459\n",
+      "                  food  99.303224  99.307749  99.293593  99.303224\n",
+      "               shelter  99.196419  99.203433  99.178790  99.196419\n",
+      "              clothing  99.735530  99.735232  99.724222  99.735530\n",
+      "                 money  99.506663  99.509142  99.478069  99.506663\n",
+      "        missing_people  99.689757  99.690728  99.666044  99.689757\n",
+      "              refugees  99.328654  99.331937  99.293190  99.328654\n",
+      "                 death  99.404944  99.407774  99.385153  99.404944\n",
+      "             other_aid  97.741837  97.794794  97.651444  97.741837\n",
+      "infrastructure_related  98.586105  98.600741  98.506797  98.586105\n",
+      "             transport  99.099786  99.108194  99.052012  99.099786\n",
+      "             buildings  99.232021  99.238186  99.202311  99.232021\n",
+      "           electricity  99.649069  99.650322  99.633000  99.649069\n",
+      "                 tools  99.832164  99.832447  99.819704  99.832164\n",
+      "             hospitals  99.760960  99.761536  99.746044  99.760960\n",
+      "                 shops  99.883023  99.883160  99.874029  99.883023\n",
+      "           aid_centers  99.649069  99.650311  99.618096  99.649069\n",
+      "  other_infrastructure  98.967552  98.978576  98.900692  98.967552\n",
+      "       weather_related  98.759028  98.775697  98.750686  98.759028\n",
+      "                floods  99.160818  99.168417  99.140020  99.160818\n",
+      "                 storm  99.323568  99.327581  99.312424  99.323568\n",
+      "                  fire  99.786390  99.786850  99.774944  99.786390\n",
+      "            earthquake  99.440545  99.442771  99.433107  99.440545\n",
+      "                  cold  99.689757  99.689803  99.677576  99.689757\n",
+      "         other_weather  99.003153  99.013508  98.950934  99.003153\n",
+      "         direct_report  98.214831  98.247038  98.183213  98.214831\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_model(m,X_train,y_train,category_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model, X_test, Y_test, category_names):\n",
+    "    \"\"\"\n",
+    "    INPUT:\n",
+    "    model - ML model\n",
+    "    X_test - test messages\n",
+    "    y_test - categories for test messages\n",
+    "    category_names - category name for y\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    none - print scores (precision, recall, f1-score) for each output category of the dataset.\n",
+    "    \"\"\"\n",
+    "    Y_pred_test = model.predict(X_test)\n",
+    "\n",
+    "    for i, cat in enumerate(category_names):\n",
+    "        print(f'*********************** {cat.upper()} ***********************')\n",
+    "        print(classification_report(Y_test.values[:,i],Y_pred_test[:,i]))\n",
+    "\n"
    ]
   },
   {
