created a new class StartVerbExtractor()

--- a/models/ML Pipeline Preparation.ipynb
+++ b/models/ML Pipeline Preparation.ipynb
@@ -20,18 +20,14 @@
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.pipeline import Pipeline,FeatureUnion\n",
-    "import matplotlib.pyplot as plt\n",
     "from sqlalchemy import create_engine\n",
     "from nltk.tokenize import word_tokenize,sent_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk import pos_tag\n",
     "from sklearn.multioutput import MultiOutputClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier,GradientBoostingClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.base import BaseEstimator,TransformerMixin\n",
@@ -894,16 +890,7 @@
     "category_names = list(df.columns[4:])\n",
     "\n",
     "def evaluate_model(model, X_test, Y_test, category_names):\n",
-    "    \"\"\"\n",
-    "    INPUT:\n",
-    "    model - ML model\n",
-    "    X_test - test messages\n",
-    "    y_test - categories for test messages\n",
-    "    category_names - category name for y\n",
     "\n",
-    "    OUTPUT:\n",
-    "    none - print scores (precision, recall, f1-score) for each output category of the dataset.\n",
-    "    \"\"\"\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
     "    print(classification_report(Y_test.values,y_pred,target_names=category_names))"
@@ -1123,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
