--- a/models/ML Pipeline Preparation.ipynb
+++ b/models/ML Pipeline Preparation.ipynb
@@ -517,6 +517,21 @@
    "outputs": [],
    "source": [
     "class StartVerbExtractor(BaseEstimator,TransformerMixin):\n",
+    "    '''\n",
+    "\n",
+    "    The StartVerbExtractor class consists of function starting_verb function \n",
+    "    tokenizes the input text into sentences using \n",
+    "    the nltk library, and then tags the first word in each phrase using part-of-speech \n",
+    "    tagging. \n",
+    "\n",
+    "    The method returns True if the first word is a verb (as indicated by a \n",
+    "    part-of-speech tag of 'VB' or 'VBP') or if it is the term 'RT' \n",
+    "    (which may suggest a retweet). \n",
+    "\n",
+    "    If not, it returns False.\n",
+    "\n",
+    "    '''\n",
+    "\n",
     "    def starting_verb(self, text):\n",
     "        sentence_list = sent_tokenize(text)\n",
     "        for sentence in sentence_list:\n",
